tests/NormalTests/paczka1/fuzzy1/15480266.err
Error in line 1: GclP2Rj9J A538 38,4
Error in line 5: jfVmX9s S582 25,7
Error in line 6: jfVmX9s S126 92,6
Error in line 7: jfVmX9s A538 65,6
Error in line 10: qFXB S582 40,8
Error in line 14: 1C0Ai S582 85,5
Error in line 13: qFXB S226 63,3
